--- a/arch/arm64/boot/dts/qcom/sdm845.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm845.dtsi
@@ -274,25 +274,27 @@
 			cell-index = <0>;
 		};
 
+
 		qup_1: qcom,geni_se@ac0000 {
 			compatible = "qcom,geni-se-qup";
+			#address-cells = <1>;
+			#size-cells = <1>;
 			reg = <0xac0000 0x6000>;
-		};
-
-		qup_uart2: serial@a84000 {
-			compatible = "qcom,geni-console", "qcom,geni-uart";
-			reg = <0xa84000 0x4000>;
-			reg-names = "se_phys";
-			clock-names = "se-clk", "m-ahb", "s-ahb";
-			clocks = <&gcc GCC_QUPV3_WRAP1_S1_CLK>,
-				 <&gcc GCC_QUPV3_WRAP_1_M_AHB_CLK>,
+			clocks = <&gcc GCC_QUPV3_WRAP_1_M_AHB_CLK>,
 				 <&gcc GCC_QUPV3_WRAP_1_S_AHB_CLK>;
-			pinctrl-names = "default", "sleep";
-			pinctrl-0 = <&qup_uart2_default>;
-			pinctrl-1 = <&qup_uart2_sleep>;
-			interrupts = <GIC_SPI 354 IRQ_TYPE_NONE>;
-			qcom,wrapper-core = <&qup_1>;
-			status = "disabled";
+			clock-names = "m-ahb", "s-ahb";
+
+			qup_uart2: serial@a84000 {
+				compatible = "qcom,geni-debug-uart";
+				reg = <0xa84000 0x4000>;
+				reg-names = "se-phys";
+				clock-names = "se-clk";
+				clocks = <&gcc GCC_QUPV3_WRAP1_S1_CLK>;
+				pinctrl-names = "default", "sleep";
+				pinctrl-0 = <&qup_uart2_default>;
+				pinctrl-1 = <&qup_uart2_sleep>;
+				interrupts = <GIC_SPI 354 IRQ_TYPE_NONE>;
+			};
 		};
 	};
 };
